--- a/templates/userLogin.html
+++ b/templates/userLogin.html
@@ -53,8 +53,7 @@
             <button type="submit">Log in</button>
             <p id="dha">Don't Have Account?</p>
             
-        </form><!--測試註解-->
-        <!--測試註解-->
+        </form>
         <a href="/signup"><p id="signup">Sign Up</p></a>
     </div>
 </body>
