--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="l_bottom">
                     <div class="l_bottom_l">
-                        <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#account" class="l_word">Account</a>
+                        <a href="#" type="button" data-bs-toggle="modal" data-bs-target="#account" class="l_word">Setting</a>
                     </div>
                     <div class="l_bottom_r">
                         <a class="r_word" href="/signout">Log Out</a>
@@ -90,6 +90,80 @@
             </div>
         </div>
 
+                <!--跳出視窗內容 Create -->
+
+                <div class="modal fade" id="create" tabindex="-1" aria-labelledby="accountModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+        
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="accountModalLabel">新增專案</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+        
+                            <div class="modal-body">
+                                <div class="create_title">
+                                    <p>請輸入要新增的專案名稱</p>
+                                </div>
+                                <form>
+                                    <div class="mb-3">
+                                        <textarea class="form-control" id="message-text"></textarea>
+                                    </div>
+                                    <div class="from-group text-center">
+                                        <button type="button" class="btn btn-info " data-bs-dismiss="modal" onclick="addProject() ">新增</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--跳出視窗內容 Question -->
+                <div class="modal fade" id="question" tabindex="-1" aria-labelledby="accountModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+        
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="accountModalLabel">使用說明</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+        
+                            <div class="modal-body">
+                                <div class="text">
+                                    <p>按下 <i class="fa-regular fa-square-plus"></i> 可新增專案<br>按下 <i class="fa-solid fa-pen-to-square"></i> 可修改專案名稱</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--跳出視窗內容 Edit -->
+                <div class="modal fade" id="edit" tabindex="-1" aria-labelledby="accountModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+        
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="accountModalLabel">變更專案名稱</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+        
+                            <div class="modal-body">
+                                <div class="create_title">
+                                    <p>請輸入要變更的專案名稱</p>
+                                </div>
+                                <form>
+                                    <div class="mb-3">
+                                        <textarea class="form-control" id="message-text"></textarea>
+                                    </div>
+                                    <div class="from-group text-center">
+                                        <button type="button" class="btn btn-info " data-bs-dismiss="modal">變更</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!--跳出視窗內容 Account -->
 
                 <div class="modal fade" id="account" tabindex="-1" aria-labelledby="accountModalLabel" aria-hidden="true">
@@ -104,19 +178,54 @@
                             <div class="modal-body">
                                 <form>
                                     <div class="form-group">
-                                        <input type="email" class="account form-control" placeholder="Email">
+                                        <input type="email" class="account form-control" placeholder="Email"  disabled>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="password form-control" placeholder="Password">
+                                        <input type="password" class="password form-control" placeholder="Password" disabled>
                                     </div>
                                     <div class="from-group text-center">
-                                        <button type="button" class="btn btn-info ">儲存</button>
+                                        <button type="button" class="btn btn-info " data-bs-toggle="modal" data-bs-target="#changepassword" >變更密碼</button>
                                     </div>
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!--跳出視窗內容 Changepassword -->
+                <div class="modal fade" id="changepassword" tabindex="-1" aria-labelledby="accountModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+        
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="accountModalLabel">變更密碼</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+        
+                            <div class="modal-body">
+                                <form>
+                                    <div class="form-group">
+                                        <p>請輸入原本的密碼</p>
+                                        <input type="password" class="ch_password form-control" id="floatingPassword1">
+                                        <i id="checkEye1" class="fas fa-eye"></i>
+                                    </div>                                    <div class="form-group">
+                                        <p>請輸入要修改的密碼</p>
+                                        <input type="password" class="ch_password form-control" id="floatingPassword2">
+                                        <i id="checkEye2" class="fas fa-eye"></i>
+                                    </div>                                    <div class="form-group">
+                                        <p>請再次輸入要修改的密碼</p>
+                                        <input type="password" class="ch_password form-control" id="floatingPassword3">
+                                        <i id="checkEye3" class="fas fa-eye"></i>
+                                    </div>
+                                    <div class="from-group text-center">
+                                        <button type="button" class="btn btn-info change_btn" data-bs-toggle="modal" data-bs-target="#changepassword" >變更密碼</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
 
                 <!--跳出視窗內容 Report -->
                 <div class="modal fade" id="report" tabindex="-1" aria-labelledby="accountModalLabel" aria-hidden="true">
@@ -255,6 +364,51 @@
                 newDivBlackLine.classList.add('black-line');
                 return newDivBlackLine;
             }
+                        //睜眼閉眼
+                        var checkEye = document.getElementById("checkEye1");
+            var floatingPassword =  document.getElementById("floatingPassword1");
+            checkEye.addEventListener("click", function(e){
+                if(e.target.classList.contains('fa-eye')){
+                //換class 病患 type
+                e.target.classList.remove('fa-eye');
+                e.target.classList.add('fa-eye-slash');
+                floatingPassword1.setAttribute('type','text')
+                }else{
+                floatingPassword1.setAttribute('type','password');
+                e.target.classList.remove('fa-eye-slash');
+                e.target.classList.add('fa-eye')
+                }
+            }); 
+
+            var checkEye = document.getElementById("checkEye2");
+            var floatingPassword =  document.getElementById("floatingPassword2");
+            checkEye.addEventListener("click", function(e){
+                if(e.target.classList.contains('fa-eye')){
+                //換class 病患 type
+                e.target.classList.remove('fa-eye');
+                e.target.classList.add('fa-eye-slash');
+                floatingPassword2.setAttribute('type','text')
+                }else{
+                floatingPassword2.setAttribute('type','password');
+                e.target.classList.remove('fa-eye-slash');
+                e.target.classList.add('fa-eye')
+                }
+            }); 
+
+            var checkEye = document.getElementById("checkEye3");
+            var floatingPassword =  document.getElementById("floatingPassword3");
+            checkEye.addEventListener("click", function(e){
+                if(e.target.classList.contains('fa-eye')){
+                //換class 病患 type
+                e.target.classList.remove('fa-eye');
+                e.target.classList.add('fa-eye-slash');
+                floatingPassword3.setAttribute('type','text')
+                }else{
+                floatingPassword3.setAttribute('type','password');
+                e.target.classList.remove('fa-eye-slash');
+                e.target.classList.add('fa-eye')
+                }
+            }); 
         </script>
 
     </body>
