--- a/templates/resetPassword.html
+++ b/templates/resetPassword.html
@@ -43,8 +43,7 @@
             <input type="npassword" required="required" placeholder="Enter Your New Password" name="user_password" id="password">
             <p>Confirm</p>
             <input type="confirm" required="required" placeholder="Enter Your New Password Again" name="user_password_confirm" id="password-confirm">
-            <p id="reset_password-error" style="color: red;"></p>
-            <br>
+            <p id="reset_password-error" style="color: red; font-size: 28px;"></p>
             <br>
             <!-- <input type="button" value="Done" onclick="location.href='login'"> -->
             <button>Done</button>
