--- a/templates/userForget.html
+++ b/templates/userForget.html
@@ -49,7 +49,7 @@
             <input type="name" required="required" placeholder="Enter Your Name" name="user_name">
             <p>Email</p>
             <input type="email" required="required" placeholder="Enter Your Email" name="user_email">
-            <p id="forget-error-message" style="color: red;"></p>
+            <p id="forget-error-message" style="color: red; font-size: 28px;"></p>
             <br>
             <br>
             <!-- <input type="button" value="Next"> -->
