--- a/templates/userLogin.html
+++ b/templates/userLogin.html
@@ -48,8 +48,8 @@
             <input type="email" placeholder="Enter Your Email" required="required" name="user_email" id="email">
             <p>Password</p>
             <input type="password" placeholder="Enter Your Password" required="required" name="user_password" id="password">
-            <a href="forgetpsw"><p>forget password?</p><p id="login-error" style="color: red;"></p></a>
-            <p id="login-error" style="color: red;"></p>
+            <a href="forgetpsw"><p>forget password?</p></a>
+            <p id="login-error" style="color: red; font-size: 28px;" ></p>
             <button type="submit">Log in</button>
             <p id="dha">Don't Have Account?</p>
             
