--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf8">
         <title>MADetect home page</title>
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+
 
         <!-- 字體 -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
