--- a/templates/home.html
+++ b/templates/home.html
@@ -117,7 +117,7 @@
                       <div class="editable-content" contenteditable="true"></div>
                     </div>
                     <div class="button-container">
-                      <button class="custom-button" onclick="addNewElements()"><img src="send4.png" width="24px" height="24px"></button>
+                      <button class="custom-button" onclick="addNewElements()"><img src="/static/pic/send4.png" width="24px" height="24px"></button>
                     </div>
             </div>
         </div>
@@ -309,7 +309,7 @@
 
                 var newButton = document.createElement('button');
                 newButton.classList.add('custom-button');
-                newButton.innerHTML = '<img src="send4.png" width="24px" height="24px" alt="送出">';
+                newButton.innerHTML = '<img src="/static/pic/send4.png" width="24px" height="24px" alt="送出">';
                 newButton.onclick = function() {
                     addNewElementsD(newDivDgreen);
                 };
@@ -344,7 +344,7 @@
 
                 var newButton = document.createElement('button');
                 newButton.classList.add('custom-button');
-                newButton.innerHTML = '<img src="send4.png" width="24px" height="24px" alt="送出">';
+                newButton.innerHTML = '<img src="/static/pic/send4.png" width="24px" height="24px" alt="送出">';
                 newButton.onclick = function() {
                     addNewElementsD(newDivDgreen);
                 };
