--- a/templates/components/modals.html
+++ b/templates/components/modals.html
@@ -17,7 +17,7 @@
                         <textarea class="form-control" id="create-project-name"></textarea>
                     </div>
                     <div class="from-group text-center">
-                        <button type="button" class="btn btn-info" data-bs-dismiss="modal" onclick="addProject()">新增</button>
+                        <button type="button" class="btn btn-info" onclick="addProject()">新增</button>
                     </div>
                 </form>
             </div>
@@ -59,7 +59,7 @@
                         <textarea class="form-control" id="edit-project-name"></textarea>
                     </div>
                     <div class="from-group text-center">
-                        <button type="button" class="btn btn-info" data-bs-dismiss="modal">變更</button>
+                        <button type="button" class="btn btn-info" onclick="updateProject()">變更</button>
                     </div>
                 </form>
             </div>
@@ -121,6 +121,26 @@
                         <button type="button" class="btn btn-info change_btn" data-bs-toggle="modal" data-bs-target="#changepassword">變更密碼</button>
                     </div>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 刪除專案模態框 -->
+<div class="modal fade" id="delete" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="deleteModalLabel">刪除專案</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>確定要刪除此專案嗎？</p>
+                <p class="text-danger">此操作無法復原，將刪除專案內所有記錄。</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-danger" onclick="deleteProject()">刪除</button>
             </div>
         </div>
     </div>
