--- a/templates/auth.html
+++ b/templates/auth.html
@@ -7,10 +7,6 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
 {% endblock %}
 
-{% block body %}
-<body class="{% if form_type == 'admin_login' %}admin-auth{% else %}user-auth{% endif %}">
-{% endblock %}
-
 {% block content %}
 <div class="auth-container">
     <div class="topic">
@@ -94,6 +90,9 @@
 <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
 <script src="{{ url_for('static', filename='js/auth-forms.js') }}"></script>
 <script>
+    // 設定 body class
+    document.body.className = '{% if form_type == "admin_login" %}admin-auth{% else %}user-auth{% endif %}';
+    
     // 設定表單類型
     const formType = '{{ form_type }}';
     const isAdmin = {{ 'true' if form_type == 'admin_login' else 'false' }};
