--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,10 @@
         <meta charset="utf8">
         <title>MADetect home page</title>
         
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='pic/system_icon.png') }}">
+        <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='pic/system_icon.png') }}">
+        
         <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
