--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,8 @@
     {% include 'components/sidebar.html' %}
     
     <!-- 主功能區 -->
-    <div class="r_side">
+    <div class="r_side" id="r_side">
+                {% if current_project %}
                 <div class="r_container">
                     <div class="title">請輸入廣告詞</div>
                     <div class="input-block">
@@ -20,6 +21,33 @@
                 </button>
                     </div>
                 </div>
+                {% else %}
+                <!-- 預設頁面 -->
+                <div class="r_container default-page">
+                    <div class="title">歡迎使用 MADetect</div>
+                    <div class="input-block">
+                        <div class="default-content">
+                            <h2>開始使用</h2>
+                            <p>MADetect 是一個醫療廣告法規檢測工具，幫助您確保醫療廣告符合台灣醫療法規。</p>
+                            
+                            <h3>操作建議：</h3>
+                            <ul>
+                                <li>點擊左側「新增專案」按鈕創建新專案</li>
+                                <li>選擇或創建專案後，即可開始檢測醫療廣告</li>
+                                <li>輸入您的醫療廣告詞，系統會自動分析是否符合法規</li>
+                                <li>系統會提供專業醫療建議和修改建議</li>
+                            </ul>
+                            
+                            <h3>功能說明：</h3>
+                            <ul>
+                                <li><strong>專業醫療建議：</strong>分析廣告是否違法，並提供相關法條說明</li>
+                                <li><strong>修改建議：</strong>提供符合法規的廣告詞修改方案</li>
+                                <li><strong>專案管理：</strong>可以創建多個專案，分別管理不同的廣告檢測記錄</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
 
