--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -2,7 +2,7 @@
 <div class="side">
         <div class="header">
             <div class="name">
-                <a class="name" href="">MADetect</a>
+                <a class="name" href="#" onclick="showDefaultPage(); return false;">MADetect</a>
             </div>
         </div>
         
